plugins {
    id 'base'
    id 'jacoco'
}

allprojects {
    group = 'com.senthora.gatlingfx'
    version = '0.1.0'

    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java-library'
    apply plugin: 'jacoco'

    base {
        archivesName = "${rootProject.name}-${project.name}"
    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    jacoco {
        toolVersion = '0.8.14'
    }

    tasks.withType(Test).configureEach {
        useJUnitPlatform()

        if (name == "integrationTest") {
            outputs.upToDateWhen { false }
        }
        testLogging {
            events "passed", "skipped", "failed"
            showStandardStreams = true
        }
    }

    tasks.jacocoTestReport {
        dependsOn tasks.test

        reports {
            xml.required = true
            html.required = true
        }
    }

    testing {
        suites {
            integrationTest(JvmTestSuite) {
                targets {
                    all {
                        testTask.configure {
                            shouldRunAfter(tasks.test)
                            jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
                        }
                    }
                }
            }
        }
    }
}

tasks.register('jacocoTestReport', JacocoReport) {
    dependsOn subprojects.collectMany { project ->
        project.tasks.matching {
            it.name in ['test', 'integrationTest']
        }
    }
    dependsOn subprojects.collect { it.tasks.named('jacocoTestReport') }

    additionalSourceDirs.from files(subprojects.sourceSets.main.allSource.srcDirs)
    sourceDirectories.from files(subprojects.sourceSets.main.allSource.srcDirs)
    classDirectories.from files(subprojects.sourceSets.main.output)

    executionData.from fileTree(layout.projectDirectory) {
        include '**/build/jacoco/*.exec'
    }
    reports {
        xml.required = true
        html.required = true

        xml.outputLocation = layout.buildDirectory.file(
                'reports/jacoco/jacocoRootReport.xml'
        )
        html.outputLocation = layout.buildDirectory.dir(
                'reports/jacoco/html'
        )
    }
}

tasks.named('clean') {
    delete layout.buildDirectory
}

tasks.register("gatlingFx", JavaExec) {
    group = "verification"
    description = "Runs GatlingFx simulations"

    classpath = files(rootProject.subprojects
        .findAll { it.name in ["core", "proxy", "wiremock"] }
        .collect { it.sourceSets.integrationTest.runtimeClasspath }
    )
    mainClass = "com.senthora.gatlingfx.runtime.core.application.GatlingFx"

    jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
}
